--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       <p class="to-do">Subscribe and get notified</p>
     </div>
 
-    <div class="input-ctn">
+    <form class="input-ctn" action="#" name="email-sub" method="post" data-netlify="true">
       <div class="input_err">
         <input type="email" name="email" class="email" placeholder="Your email address...">
         <p class="err">Please provide a valid email address</p>
       </div>
       <input type="submit" value="Notify Me" class="submit-btn">
-    </div>
+    </form>
 
     <img src="./images/illustration-dashboard.png" alt="" class="main-img">
 
