--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p class="to-do">Subscribe and get notified</p>
     </div>
 
-    <form class="input-ctn" action="#" name="email-sub" method="post" data-netlify="true">
+    <form class="input-ctn" action="./index.html" name="email-sub" method="post" data-netlify="true">
       <div class="input_err">
         <input type="email" name="email" class="email" placeholder="Your email address...">
         <p class="err">Please provide a valid email address</p>
